--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,11 @@
 			密码：<input type="text" name="password"/><br/>
 			<input type="submit" value="登录" name="action"/><br/>
 		</form>
+		<form action="contactq" method="GET" >
+			账号：<input type="text" name="username"/><br/>
+			密码：<input type="text" name="password"/><br/>
+			<input type="submit" value="登录" name="action"/><br/>
+		</form>
 		
 	</body>
 
